--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "type": "library",
     "license": "GPL-3.0-only",
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": false,
     "require": {
         "php": ">=7.1.3"
